presto-main/src/main/resources/webapp/assets/presto.css
/* ... */
.navbar-cluster-info .text {
    color: #fff;
    font-size: 16px;
}

#page-subtitle {
    color: #8c8c8c;
    padding-left: 3px;
    text-transform: none;
}

.query-id {
    margin-bottom: 0;
}

.nav-disabled {
    pointer-events: none;
    cursor: not-allowed;
    background-color: #336171;
    opacity: 1;
    font-weight: 500;
    border-color: #137698;
}

.progress-large {
    margin: 0;
    background-color: #808286;
    height: 36px;
    width: 100%;
}

.progress-large .progress-bar {
    font-size: 18px;
    line-height: 30px;
}

/** Common elements **/
/** ====== **/

.copy-button {
    padding: 0 0 0 4px;
}

.copy-button:hover {
    color: #fff;
}

.status-light {
    border-radius: 50%;
    text-shadow: 0 0 3px #250800;
    color: #111111;
    font-size: 16px;
}

.status-light-red {
    color: #ff0100;
    text-shadow: 0 0 3px #ff0100;
}

.status-light-green {
    color: #1cff00;
    text-shadow: 0 0 3px #1cff00;
}

.status-light:before {
    content: '\25CF';
}

.header-inline-links {
    float: right;
    margin-top: 20px;
}

/** ===================== **/
/** Cluster Overview Page **/
/** ===================== **/

/** HUD **/
/** === **/

.hud-container {
    background-size: 5px 5px;
    background-image: linear-gradient(to right, #2d2d2d 1px, transparent 1px), linear-gradient(to bottom, #2d2d2d 1px, transparent 1px);
    margin: -15px 0 0 0;
    padding: 15px 0 0 0;
    height: 375px;
}

.stat-line-end {
    padding-top: 3px;
    margin-bottom: 20px;
}

.stat {
    color: #fff;
    border-bottom: 1px #424242 solid;
    border-left: 1px #424242 solid;
    margin: 0;
    font-size: 72px;
    height: 81px;
    display: flex;
    align-items: center;
    padding-left: 0;
    padding-top: 15px;
}

.stat-text {
    padding: 0 5px 0 5px;
    z-index: 99;
}

.stat-title {
    text-align: left;
    text-transform: uppercase;
    margin: 0;
    font-size: 16px;
    line-height: 1;
}

.stat-title > .text {
    padding: 5px;
    background-color: #3e3e3e;
    color: #ccc;
}

.sparkline {
    height: 80px;
    width: 100%;
    margin: 0;
}

.sparkline-tooltip {
    position: absolute;
    left: 0;
    top: 0;
    visibility: hidden;
    background-color: rgba(0, 0, 0, 0.6);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
    color: white;
    font: 20px arial, san serif;
    text-align: left;
    white-space: nowrap;
    padding: 0 40px 5px 5px;
    border: none;
    z-index: 100;
}

/** Query list **/
/** ========== **/

#query-list-title {
    font-size: 22px;
    background-color: #696E77;
    padding: 3px 3px 3px 7px;
    text-transform: uppercase;
    color: #fff;
    border-top: 1px solid #9DA4AF;
}

#query-list {
    padding: 5px 0 0 15px;
    border-bottom: 1px #424242 solid;
    border-left: 1px #424242 solid;
    border-right: 1px #424242 solid;
}

.error-message {
    text-align: center;
    padding: 20px;
}

.query {
    border-bottom: 1px #424242 solid;
    margin-bottom: 0px;
    margin-left: -15px;
    padding-left: 15px;
}

.query-snippet {
    height: 138px;
    overflow: hidden;
}

.query-snippet code {
    overflow: hidden;
}

.progress {
    margin: 0;
    background-color: #808286;
    height: 28px;
}

.progress-bar {
    padding: 4px;
    min-width: 14%;
}

.tinystat-row {
    padding-right: 0;
}

.tinystat {
    display: inline-block;
    width: 100px;
}

.stat-row {
    padding: 2px 0 1px 0;
}

.query-header {
    padding: 4px 0 4px 0;
    background-color: #1b1b1b;
    margin: 0;
}

.query-header-queryid {
    margin-left: -15px;
    margin-right: -35px;
    padding: 8px 0 8px 0;
}

.query-header-timestamp {
    text-align: right;
    color: #b1b1b1;
}

.query-progress-container {
    padding: 0;
}

/** Query List Toolbar **/
/** ================== **/

.toolbar-row {
    padding-right: 15px;
}

.toolbar-col {
    background-color: #454a58;
    margin-top: -5px;
    padding: 5px;
}

.toolbar-row .form-control {
    color: #000;
}

.toolbar-row .input-group-btn .btn:focus {
    outline: none;
    background-color: #5bc0de;
    border: 1px #529eb5 solid;
}

.toolbar-row .input-group-btn .active:focus {
    outline: none;
    background-color: #277F98;
    border: 1px #529eb5 solid;
}

.toolbar-row .input-group-btn .active {
    background-color: #277F98;
    border: 1px #529eb5 solid;
}

.style-radio {
    color: #ebe6ff;
    background-color: #2e264e;
    border: 1px #5d4f94 solid;
    font-weight: 500;
}

.filter-addon {
    color: #000;
    background-color: #fff;
    border: none;
    border-top: 2px solid #454A58;
    border-bottom: 3px solid #454A58;
}

.toolbar-row .input-group .form-control {
    margin-top: 2px;
    margin-bottom: -2px;
    width: 98%;
}

.toolbar-row .dropdown-menu li a {
    color: #424242;
}

.toolbar-row .dropdown-menu li .selected {
    background-color: #418194;
    color: #fff;
    font-weight: 500;
}

#error-type-dropdown {
    margin-left: -1px;
    height: 30px;
    padding: 5px 10px;
    font-size: 12px;
    line-height: 1.5;
    position: relative;
    color: #fff;
    background-color: #4ba1bb;
    border-color: #46b8da;
}

.error-type-dropdown-menu {
    margin-left: 143px;
}

/** Loading indicators **/
/** ================== **/

.sparkline .loader {
    margin: 0 0 0 90px;
}

.sparkline .loader, .loader:after {
    width: 50px;
    height: 50px;
}

/** ================== **/
/** Query Details Page **/
/** ================== **/

#query-detail {
    color: #cecece;
    font-size: 16px;
}

#tasks {
    font-size: 15px;
}

#query-detail pre {
    margin-top: 5px;
    border: 1px #3a3a3a solid;
}

/** Summary Section **/
/** =============== **/

.info-title {
    width: 180px;
    font-weight: 500;
    text-align: right;
}

.info-text {
    color: #fff;
}
/* ... */

